--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -47,8 +47,8 @@ jobs:
           cache: npm
 
       # The `run` key tells the job to execute a command on the runner. In this example, `npm ci` is used to install the npm software packages for the project.
-      - name: Install
-        run: npm ci
+      # - name: Install
+      #   run: npm ci
 
       - name: Jest Tests
         run: npm run test
