--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -48,7 +48,7 @@ jobs:
 
       # The `run` key tells the job to execute a command on the runner. In this example, `npm ci` is used to install the npm software packages for the project.
       - name: Install Jest globally (якщо необхідно)
-        run: npm install -g jest
+        run: npm install
 
       - name: Run tests # Крок 4: запуск тестів
         run: npm run test
