--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "homepage": "https://serednii.github.io/testweb",
 
   "scripts": {
+
     "deploy": "gh-pages -d dist",
-    "test": "jest"
+
+    "test": "jest",
+    
+    "lint": "eslint ."
   },
 
   "devDependencies": {
+
+    "@eslint/js": "^9.11.0",
+
+    "eslint": "^9.11.0",
+
+    "eslint-plugin-react": "^7.36.1",
+
     "gh-pages": "^6.1.0",
+
+    "globals": "^15.9.0",
+
     "jest": "^29.7.0"
+
   }
 
 }
